--- a/templates/Inventario/espacio_form.html
+++ b/templates/Inventario/espacio_form.html
@@ -1,7 +1,7 @@
 {% extends 'Inventario/form_template.html' %}
 
-{% block create_title %}Editar Espacio{% endblock %}
-{% block update_title %}Registrar Espacio{% endblock %}
+{% block create_title %}Registrar Espacio{% endblock %}
+{% block update_title %}Editar Espacio{% endblock %}
 {% block buttons %}
     <a href="{% url 'Inventario:index' %}" class="btn btn-secondary">Volver</a>
     <input type="submit" class="btn btn-primary" value="Guardar">
