--- a/Inventario/static/Inventario/css/lpusuario.css
+++ b/Inventario/static/Inventario/css/lpusuario.css
@@ -71,6 +71,16 @@ body{
 
 #resultado {
     position: relative;
-        top: 100px;
-        left: -765px;
+    top: 100px;
+    left: -765px;
 }
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+
