Se agrega dropdown a la base (incluye link para cambio de contraseña), se agrega detalle de articulo/espacio al perfil de usuario, se agrega carpeta media para guardar archivos subidos por usuarios como son las imagenes de articulo/espacio

--- a/Inventario/static/Inventario/css/base.css
+++ b/Inventario/static/Inventario/css/base.css
@@ -4,8 +4,10 @@
     margin-bottom: 30px;
 }
 
-.navbar-nav li a {
-    line-height: 68px;
+.navbar-nav > li > a {
+    position: relative;
+    top: 7px;
+    line-height: 50px;
 }
 
 .nav-item {
