--- a/templates/Inventario/articulo_form.html
+++ b/templates/Inventario/articulo_form.html
@@ -2,6 +2,7 @@
 
 {% block create_title %}Registrar Artículo{% endblock %}
 {% block update_title %}Editar Artículo{% endblock %}
+{% block form_attrs %}enctype="multipart/form-data"{% endblock %}
 {% block buttons %}
     <a href="{% url 'Inventario:index' %}" class="btn btn-secondary">Volver</a>
     <input type="submit" class="btn btn-primary" value="Guardar">
