--- a/templates/Inventario/form_template.html
+++ b/templates/Inventario/form_template.html
@@ -2,14 +2,15 @@
 {% load widget_tweaks %}
 
 {% block content %}
-    <div class="col-md-8 offset-md-2">
-        <div class="card border-secondary">
-            <div class="card-header border-secondary">
-                <h3 class="mb-0">{% if object %}{% block update_title %}{% endblock %}{% else %}{% block create_title %}
-                {% endblock %}{% endif %}</h3>
-            </div>
-            <div class="card-body">
-                <form method="post" class="form" role="form">
+    <form method="post" class="form" role="form" {% block form_attrs %}{% endblock %}>
+        <div class="col-md-8 offset-md-2 mb-5">
+            <div class="card border-secondary">
+                <div class="card-header border-secondary">
+                    <h3 class="mb-0">
+                        {% if object %}{% block update_title %}{% endblock %}{% else %}{% block create_title %}
+                        {% endblock %}{% endif %}</h3>
+                </div>
+                <div class="card-body">
                     {% csrf_token %}
                     {% for field in form.visible_fields %}
                         <div class="form-group row">
@@ -40,8 +41,8 @@
                             {% block buttons %}{% endblock %}
                         </div>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
 {% endblock %}
