--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,6 @@
     <title>{% block title %} Inventario WebApp {% endblock %}</title>
 </head>
 <body>
-
 <nav class="navbar navbar-expand-md navbar-light border-bottom border-top border-dark">
     <a class="navbar-brand" href="{% url 'Inventario:index' %}"><img
             src="http://www.cei.cl/wp-content/uploads/2014/12/Logo-Cei.png" id="cei-logo"></a>
@@ -36,20 +35,30 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'Inventario:index' %}">
-                    <i class="fas fa-home fa-2x"></i>
+                    <i class="fas fa-home fa-3x"></i>
                 </a>
             </li>
             {% if user.is_authenticated %}
                 <li class="nav-item navbar-text text-right" style="font-size:13px">
-                    <span style="font-size:16px">{{ user.nombre }} {{ user.apellido }}</span><br>
+                    <span style="font-size:16px">
+                    <i class="fas fa-circle {% if user.estado == 'H' %} text-success {% else %} text-danger {% endif %}"></i>
+                        {% if user.esAdmin %}
+                            <small><strong>Admin </strong></small>{% endif %}{{ user.nombre }} {{ user.apellido }}</span><br>
                     {{ user.username }}<br>
                     {{ user.email }}
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'Inventario:perfilUsuario' user.id %}">Mi Perfil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'customAuth:logout' %}">Logout</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-user-circle fa-3x"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'Inventario:perfilUsuario' user.id %}">Mi Perfil</a>
+                        <a class="dropdown-item" href="{% url 'Inventario:passwordChange' %}">Cambiar
+                            Contraseña</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'customAuth:logout' %}">Cerrar Sesión</a>
+                    </div>
                 </li>
             {% endif %}
         </ul>
