--- a/templates/Inventario/landingPageUsuario.html
+++ b/templates/Inventario/landingPageUsuario.html
@@ -12,7 +12,7 @@
 {% block content %}
 
     <div class="btn-group" style="width:100%">
-        <button class="btn-group" style="width:50%" onclick="mostrarContenido(event, 'Articulo')">Artículos</button>
+        <button class="btn-group" style="width:50%" onclick="mostrarContenido(event, 'Articulo')">Artículo</button>
         <button class="btn-group" style="width:50%" onclick="mostrarContenido(event, 'Espacio')">Espacios</button>
     </div>
 
