--- a/templates/Inventario/landingPageAdministrador.html
+++ b/templates/Inventario/landingPageAdministrador.html
@@ -13,68 +13,157 @@
 
     <div class="relative"><h3>Administrador</h3></div>
     <hr>
+    <ul class="nav nav-pills nav-fill">
+      <li class="nav-item">
+        <a class="nav-link active" data-toggle="pill" id="pills-home-tab" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Grilla</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="pill" id="pills-profile-tab" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Reservas</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="pill" id="pills-contact-tab" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Préstamos</a>
+      </li>
+    </ul>
+<div class="tab-content" id="pills-tabContent">
+<div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
     <h3> Semana del lunes: {{ lunes }} - domingo: {{ domingo }}</h3>
     {% if reservagrilla %}
-    <table border="1" width="100%">
-    <tr><th>Bloque</th><th>Lunes</th><th>Martes</th><th>Miercoles</th><th>Jueves</th><th>Viernes</th><th>Sabado</th><th>Domingo</th></tr>
-
-    <tr><td>09:00 - 10:00</td><td>{{ lunes1.espacio.nombre }}</td><td>{{ martes1.espacio.nombre }}</td><td>{{ miercoles1.espacio.nombre }}</td><td>{{ jueves1.espacio.nombre }}</td>
-        <td>{{ viernes1.espacio.nombre }}</td><td>{{ sabado1.espacio.nombre }}</td><td>{{ domingo1.espacio.nombre }}</td>
+        <table class="table table-bordered">
+  <thead>
+    <tr>
+      <th scope="col">Bloque</th>
+      <th scope="col">Lunes</th>
+      <th scope="col">Martes</th>
+      <th scope="col">Miércoles</th>
+      <th scope="col">Jueves</th>
+      <th scope="col">Viernes</th>
+      <th scope="col">Sábado</th>
+      <th scope="col">Domingo</th>
     </tr>
-
-    <tr><td>10:00 - 11:00</td><td>{{ lunes2.espacio.nombre }}</td><td>{{ martes2.espacio.nombre }}</td><td>{{ miercoles2.espacio.nombre }}</td><td>{{ jueves2.espacio.nombre }}</td>
-        <td>{{ viernes2.espacio.nombre }}</td><td>{{ sabado2.espacio.nombre }}</td><td>{{ domingo2.espacio.nombre }}</td>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">09:00 - 10:00</th>
+      <td>{{ lunes1.espacio.nombre }}</td>
+      <td>{{ martes1.espacio.nombre }}</td>
+      <td>{{ miercoles1.espacio.nombre }}</td>
+      <td>{{ jueves1.espacio.nombre }}</td>
+      <td>{{ viernes1.espacio.nombre }}</td>
+      <td>{{ sabado1.espacio.nombre }}</td>
+      <td>{{ domingo1.espacio.nombre }}</td>
     </tr>
-
-    <tr><td>11:00 - 12:00</td><td>{{ lunes3.espacio.nombre }}</td><td>{{ martes3.espacio.nombre }}</td><td>{{ miercoles3.espacio.nombre }}</td><td>{{ jueves3.espacio.nombre }}</td>
-        <td>{{ viernes3.espacio.nombre }}</td><td>{{ sabado3.espacio.nombre }}</td><td>{{ domingo3.espacio.nombre }}</td>
+    <tr>
+      <th scope="row">10:00 - 11:00</th>
+      <td>{{ lunes2.espacio.nombre }}</td>
+      <td>{{ martes2.espacio.nombre }}</td>
+      <td>{{ miercoles2.espacio.nombre }}</td>
+      <td>{{ jueves2.espacio.nombre }}</td>
+      <td>{{ viernes2.espacio.nombre }}</td>
+      <td>{{ sabado2.espacio.nombre }}</td>
+      <td>{{ domingo2.espacio.nombre }}</td>
     </tr>
-
-    <tr><td>12:00 - 13:00</td><td>{{ lunes4.espacio.nombre }}</td><td>{{ martes4.espacio.nombre }}</td><td>{{ miercoles4.espacio.nombre }}</td><td>{{ jueves4.espacio.nombre }}</td>
-        <td>{{ viernes4.espacio.nombre }}</td><td>{{ sabado4.espacio.nombre }}</td><td>{{ domingo4.espacio.nombre }}</td>
+    <tr>
+      <th scope="row">11:00 - 12:00</th>
+      <td>{{ lunes3.espacio.nombre }}</td>
+      <td>{{ martes3.espacio.nombre }}</td>
+      <td>{{ miercoles3.espacio.nombre }}</td>
+      <td>{{ jueves3.espacio.nombre }}</td>
+      <td>{{ viernes3.espacio.nombre }}</td>
+      <td>{{ sabado3.espacio.nombre }}</td>
+      <td>{{ domingo3.espacio.nombre }}</td>
     </tr>
-
-    <tr><td>13:00 - 14:00</td><td>{{ lunes5.espacio.nombre }}</td><td>{{ martes5.espacio.nombre }}</td><td>{{ miercoles5.espacio.nombre }}</td><td>{{ jueves5.espacio.nombre }}</td>
-        <td>{{ viernes5.espacio.nombre }}</td><td>{{ sabado5.espacio.nombre }}</td><td>{{ domingo5.espacio.nombre }}</td>
+    <tr>
+      <th scope="row">12:00 - 13:00</th>
+      <td>{{ lunes4.espacio.nombre }}</td>
+      <td>{{ martes4.espacio.nombre }}</td>
+      <td>{{ miercoles4.espacio.nombre }}</td>
+      <td>{{ jueves4.espacio.nombre }}</td>
+      <td>{{ viernes4.espacio.nombre }}</td>
+      <td>{{ sabado4.espacio.nombre }}</td>
+      <td>{{ domingo4.espacio.nombre }}</td>
     </tr>
-
-    <tr><td>14:00 - 15:00</td><td>{{ lunes6.espacio.nombre }}</td><td>{{ martes6.espacio.nombre }}</td><td>{{ miercoles6.espacio.nombre }}</td><td>{{ jueves6.espacio.nombre }}</td>
-        <td>{{ viernes6.espacio.nombre }}</td><td>{{ sabado6.espacio.nombre }}</td><td>{{ domingo6.espacio.nombre }}</td>
+    <tr>
+      <th scope="row">13:00 - 14:00</th>
+      <td>{{ lunes5.espacio.nombre }}</td>
+      <td>{{ martes5.espacio.nombre }}</td>
+      <td>{{ miercoles5.espacio.nombre }}</td>
+      <td>{{ jueves5.espacio.nombre }}</td>
+      <td>{{ viernes5.espacio.nombre }}</td>
+      <td>{{ sabado5.espacio.nombre }}</td>
+      <td>{{ domingo5.espacio.nombre }}</td>
     </tr>
-
-    <tr><td>15:00 - 16:00</td><td>{{ lunes7.espacio.nombre }}</td><td>{{ martes7.espacio.nombre }}</td><td>{{ miercoles7.espacio.nombre }}</td><td>{{ jueves7.espacio.nombre }}</td>
-        <td>{{ viernes7.espacio.nombre }}</td><td>{{ sabado7.espacio.nombre }}</td><td>{{ domingo7.espacio.nombre }}</td>
+    <tr>
+      <th scope="row">14:00 - 15:00</th>
+      <td>{{ lunes6.espacio.nombre }}</td>
+      <td>{{ martes6.espacio.nombre }}</td>
+      <td>{{ miercoles6.espacio.nombre }}</td>
+      <td>{{ jueves6.espacio.nombre }}</td>
+      <td>{{ viernes6.espacio.nombre }}</td>
+      <td>{{ sabado6.espacio.nombre }}</td>
+      <td>{{ domingo6.espacio.nombre }}</td>
     </tr>
-
-    <tr><td>16:00 - 17:00</td><td>{{ lunes8.espacio.nombre }}</td><td>{{ martes8.espacio.nombre }}</td><td>{{ miercoles8.espacio.nombre }}</td><td>{{ jueves8.espacio.nombre }}</td>
-        <td>{{ viernes8.espacio.nombre }}</td><td>{{ sabado8.espacio.nombre }}</td><td>{{ domingo8.espacio.nombre }}</td>
+    <tr>
+      <th scope="row">15:00 - 16:00</th>
+      <td>{{ lunes7.espacio.nombre }}</td>
+      <td>{{ martes7.espacio.nombre }}</td>
+      <td>{{ miercoles7.espacio.nombre }}</td>
+      <td>{{ jueves7.espacio.nombre }}</td>
+      <td>{{ viernes7.espacio.nombre }}</td>
+      <td>{{ sabado7.espacio.nombre }}</td>
+      <td>{{ domingo7.espacio.nombre }}</td>
     </tr>
-
-    <tr><td>17:00 - 18:00</td><td>{{ lunes9.espacio.nombre }}</td><td>{{ martes9.espacio.nombre }}</td><td>{{ miercoles9.espacio.nombre }}</td><td>{{ jueves9.espacio.nombre }}</td>
-        <td>{{ viernes9.espacio.nombre }}</td><td>{{ sabado9.espacio.nombre }}</td><td>{{ domingo9.espacio.nombre }}</td>
+    <tr>
+      <th scope="row">16:00 - 17:00</th>
+      <td>{{ lunes8.espacio.nombre }}</td>
+      <td>{{ martes8.espacio.nombre }}</td>
+      <td>{{ miercoles8.espacio.nombre }}</td>
+      <td>{{ jueves8.espacio.nombre }}</td>
+      <td>{{ viernes8.espacio.nombre }}</td>
+      <td>{{ sabado8.espacio.nombre }}</td>
+      <td>{{ domingo8.espacio.nombre }}</td>
     </tr>
-
-    <tr><td>18:00 - 19:00</td><td>{{ lunes10.espacio.nombre }}</td><td>{{ martes10.espacio.nombre }}</td><td>{{ miercoles10.espacio.nombre }}</td><td>{{ jueves10.espacio.nombre }}</td>
-        <td>{{ viernes10.espacio.nombre }}</td><td>{{ sabado10.espacio.nombre }}</td><td>{{ domingo10.espacio.nombre }}</td>
+    <tr>
+      <th scope="row">17:00 - 18:00</th>
+      <td>{{ lunes9.espacio.nombre }}</td>
+      <td>{{ martes9.espacio.nombre }}</td>
+      <td>{{ miercoles9.espacio.nombre }}</td>
+      <td>{{ jueves9.espacio.nombre }}</td>
+      <td>{{ viernes9.espacio.nombre }}</td>
+      <td>{{ sabado9.espacio.nombre }}</td>
+      <td>{{ domingo9.espacio.nombre }}</td>
     </tr>
-
-    </table>
+    <tr>
+      <th scope="row">18:00 - 19:00</th>
+      <td>{{ lunes10.espacio.nombre }}</td>
+      <td>{{ martes10.espacio.nombre }}</td>
+      <td>{{ miercoles10.espacio.nombre }}</td>
+      <td>{{ jueves10.espacio.nombre }}</td>
+      <td>{{ viernes10.espacio.nombre }}</td>
+      <td>{{ sabado10.espacio.nombre }}</td>
+      <td>{{ domingo10.espacio.nombre }}</td>
+    </tr>
+  </tbody>
+</table>
     {% else %}
     <p>No hay reservas de espacio en la semana</p>
     {% endif %}
-    <hr>
+</div>
+    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
     <h3>Reservas</h3>
     {% if reservas %}
-        <table border="1" width="100%">
+        <table class="table table-bordered">
+          <thead>
             <tr>
-                <th>ID</th>
-                <th>Fecha creacion</th>
-                <th>Nombre solicitante</th>
-                <th>Objeto</th>
-                <th>Fecha de reserva</th>
-                <th>Inicio</th>
-                <th>Termino</th>
+              <th scope="col">ID</th>
+              <th scope="col">Fecha creacion</th>
+              <th scope="col">Nombre solicitante</th>
+              <th scope="col">Objeto</th>
+              <th scope="col">Fecha de reserva</th>
+              <th scope="col">Inicio</th>
+              <th scope="col">Termino</th>
             </tr>
+          </thead>
+          <tbody>
             {% for reserva in reservas %}
                 <tr>
                     <td>{{ reserva.id }}</td>
@@ -86,24 +175,29 @@
                     <td>{{ reserva.horaTermino }}</td>
                 </tr>
             {% endfor %}
+          </tbody>
         </table>
     {% else %}
         <p>No se encontraron reservas.</p>
     {% endif %}
-    <hr>
+    </div>
+    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
     <h3>Préstamos</h3>
     {% if prestamos %}
-        <table border="1" width="100%">
+        <table class="table table-bordered">
+          <thead>
             <tr>
-                <th>ID</th>
-                <th>Nombre solicitante</th>
-                <th>Objeto</th>
-                <th>Fecha de prestamo</th>
-                <th>Inicio</th>
-                <th>Termino</th>
-                <th>Estado</th>
+              <th scope="col">ID</th>
+              <th scope="col">Nombre solicitante</th>
+              <th scope="col">Objeto</th>
+              <th scope="col">Fecha de préstamo</th>
+              <th scope="col">Inicio</th>
+              <th scope="col">Término</th>
+              <th scope="col">Estado</th>
             </tr>
-            {% for prestamo in prestamos %}
+          </thead>
+          <tbody>
+          {% for prestamo in prestamos %}
                 <tr>
                     <td>{{ prestamo.id }}</td>
                     <td>{{ prestamo.reserva.solicitante.nombre }} {{ prestamo.reserva.solicitante.apellido }}</td>
@@ -114,9 +208,11 @@
                     <td>{{ prestamo.get_estado_display }}</td>
                 </tr>
             {% endfor %}
+          </tbody>
         </table>
     {% else %}
         <p>No se encontraron prestamos.</p>
     {% endif %}
-
+    </div>
+</div>
 {% endblock %}
