--- a/templates/Inventario/fichaArticulo.html
+++ b/templates/Inventario/fichaArticulo.html
@@ -18,12 +18,26 @@
     <hr>
 
 
-<form action="{% url upload_img %}" method="post" enctype="multipart/form-data">{% csrf_token %}
-    <p>
-        <input id="id_image" type="file" class="" name="image">
-    </p>
-    <input type="submit" value="Submit" />
-</form>
+
+    <div class="row justify-content-center align-items-center">
+        <div class="col col-lg-2">
+           <h2>{{ articulo.nombre }}</h2>
+        </div>
+        <div class="col col-lg-2">
+           <button type="button" class="btn btn-success">{{ articulo.estado }}</button>
+        </div>
+    </div>
+
+    <div class="col-6">
+      <form action="{% url upload_img %}" method="post" enctype="multipart/form-data">{% csrf_token %}
+        <p>
+            <input id="id_image" type="file" class="" name="image">
+        </p>
+        <input type="submit" value="Submit" />
+        </form>
+    </div>
+
+
 
     <div>
     <h4>Solicitar Reserva</h4>
