--- a/templates/Inventario/perfilUsuario.html
+++ b/templates/Inventario/perfilUsuario.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load Inventario_filters %}
 
 {% block title %}
     Perfil de Usuario
@@ -193,7 +192,10 @@
                                         <div class="card-body">
                                             <h5 class="card-title">
                                                 {% if registro.reserva.articulo %}
-                                                    {{ registro.reserva.articulo.nombre }}
+                                                    <a class="btn p-0 m-0 btn-lg"
+                                                       href="{% url 'Inventario:fichaArticulo' registro.reserva.articulo.id %}">
+                                                        {{ registro.reserva.articulo.nombre }}
+                                                    </a>
                                                     {% if user.esAdmin %}
                                                         <a href="{% url 'Inventario:articuloUpdate' registro.reserva.articulo.id %}"
                                                            class="btn p-0 m-0 pl-1">
@@ -205,7 +207,10 @@
                                                         </a>
                                                     {% endif %}
                                                 {% elif registro.reserva.espacio %}
-                                                    {{ registro.reserva.espacio.nombre }}
+                                                    <a class="btn p-0 m-0 btn-lg"
+                                                       href="{% url 'Inventario:fichaEspacio' registro.reserva.espacio.id %}">
+                                                        {{ registro.reserva.espacio.nombre }}
+                                                    </a>
                                                     {% if user.esAdmin %}
                                                         <a href="{% url 'Inventario:espacioUpdate' registro.reserva.espacio.id %}"
                                                            class="btn p-0 m-0 pl-1">
@@ -287,16 +292,20 @@
                                              role="tab"
                                              aria-controls="prestamo{{ registro.prestamo.id }}">
                                             <div class="col-1">
-                                                <a href="{% url 'Inventario:prestamoUpdate' registro.prestamo.id %}"
-                                                   class="list-group-link btn btn-sm btn-primary-outline lightgreen">
-                                                    <i class="fas fa-edit lightgreen"></i>
-                                                </a>
+                                                {% if user.esAdmin %}
+                                                    <a href="{% url 'Inventario:prestamoUpdate' registro.prestamo.id %}"
+                                                       class="list-group-link btn btn-sm btn-primary-outline lightgreen">
+                                                        <i class="fas fa-edit lightgreen"></i>
+                                                    </a>
+                                                {% endif %}
                                             </div>
                                             <div class="col-1">
-                                                <a href="{% url 'Inventario:prestamoDelete' registro.prestamo.id %}"
-                                                   class="list-group-link btn btn-sm btn-primary-outline lightred">
-                                                    <i class="fas fa-trash lightred"></i>
-                                                </a>
+                                                {% if user.esAdmin %}
+                                                    <a href="{% url 'Inventario:prestamoDelete' registro.prestamo.id %}"
+                                                       class="list-group-link btn btn-sm btn-primary-outline lightred">
+                                                        <i class="fas fa-trash lightred"></i>
+                                                    </a>
+                                                {% endif %}
                                             </div>
                                             <div class="col-1">
                                                 {% if user.esAdmin %}
@@ -351,8 +360,7 @@
                                                 </button>
                                                 <button type="submit" class="btn btn-primary"
                                                         formaction="{% url 'Inventario:cambiarEstadoListaPrestamos' %}">
-                                                    Guardar
-                                                    Cambios
+                                                    Guardar Cambios
                                                 </button>
                                             </div>
                                         </div>
