--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'Inventario/css/bootstrap-4-navbar.css' %}">
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
             integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
             crossorigin="anonymous"></script>
@@ -19,6 +20,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
             integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
             crossorigin="anonymous"></script>
+    <script src="{% static 'Inventario/js/bootstrap-4-navbar.js' %}"></script>
     <script src="{% static 'Inventario/js/base.js' %}"></script>
     {% block extra_head %}{% endblock %}
     <title>{% block title %} Inventario WebApp {% endblock %}</title>
@@ -52,13 +54,38 @@
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-user-circle fa-3x"></i>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{% url 'Inventario:perfilUsuario' user.id %}">Mi Perfil</a>
-                        <a class="dropdown-item" href="{% url 'Inventario:passwordChange' %}">Cambiar
-                            Contraseña</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{% url 'customAuth:logout' %}">Cerrar Sesión</a>
-                    </div>
+                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{% url 'Inventario:perfilUsuario' user.id %}">Mi Perfil</a>
+                        </li>
+                        <li><a class="dropdown-item" href="{% url 'Inventario:passwordChange' %}">Cambiar
+                            Contraseña</a></li>
+                        {% if user.esAdmin %}
+                            <li>
+                                <div class="dropdown-divider"></div>
+                            </li>
+                            <li>
+                                <a class="dropdown-item dropdown-toggle" href="#">Registrar</a>
+                                <ul class="dropdown-menu dropdown-menu-right">
+                                    <li><a class="dropdown-item" href="{% url 'Inventario:reservaCreate' %}">Reserva</a>
+                                    </li>
+                                    <li><a class="dropdown-item"
+                                           href="{% url 'Inventario:prestamoCreate' %}">Préstamo</a>
+                                    </li>
+                                    <li><a class="dropdown-item"
+                                           href="{% url 'Inventario:articuloCreate' %}">Artículo</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="{% url 'Inventario:espacioCreate' %}">Espacio</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="{% url 'Inventario:usuarioCreate' %}">Usuario</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        {% endif %}
+                        <li>
+                            <div class="dropdown-divider"></div>
+                        </li>
+                        <li><a class="dropdown-item" href="{% url 'customAuth:logout' %}">Cerrar Sesión</a></li>
+                    </ul>
                 </li>
             {% endif %}
         </ul>
